# rust-monitoring-tools

./: .gitignore  Cargo.toml  Rocket.toml  monitoring.drawio  test.json
bots/botlib/: Cargo.toml
bots/botlib/src/: commands.rs  error.rs  handler.rs  lib.rs  logger.rs  parser.rs
bots/monitoring-bot/: Cargo.toml
bots/monitoring-bot/src/: config.rs  main.rs
bots/monitoring-bot/src/commands/: profile.rs
migrations/: 20230523074840_create_tables.sql  20230523130225_test_profile.sql  20230523173830_change_load_averages.sql  20230523183035_add_network_id_to_net_stats.sql
monitoring-cli/: Cargo.toml  README.md
monitoring-cli/src/: client.rs  config.rs  error.rs  main.rs
monitoring-core/: Cargo.toml
monitoring-core/src/: client.rs  lib.rs  models.rs  options.rs
monitoring-core/src/api/: models.rs
services/monitoring-service/: Cargo.toml  Rocket.toml
services/monitoring-service/src/: error_log.rs  main.rs  profile.rs  service_info.rs
services/service-lib/: Cargo.toml
services/service-lib/src/: api_key.rs  database.rs  lib.rs  profile_key.rs  read_key.rs
services/service-lib/src/models/: battery_lifes.rs  cpu_core_loads.rs  cpu_informations.rs  cpu_loads.rs  device_profiles.rs  error_logs.rs  filesystem_infos.rs  load_averages.rs  memory_infos.rs  mod.rs  network_addresses.rs  network_statistics.rs  networks.rs  os_infos.rs  socket_statistics.rs  swap_infos.rs  system_informations.rs
