[package]
name = "monitoring-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitoring-core = { path = "../monitoring-core" }
reqwest = { version = "0.11.17", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
systemstat = "0.2.3"
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
hostname = "0.3.1"
os_info = "3.7.0"
structopt = "0.3.26"