[package]
name = "monitoring-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
anyhow = "1.0.71"
os_info = "3.7.0"
systemstat = "0.2.3"
hostname = "0.3.1"
log = "0.4.17"