[package]
name = "botlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitoring-core = { path = "../../monitoring-core" }
async-trait = "0.1.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "chrono"] }
chrono = "0.4.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"