[package]
name = "service-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.3"
features = ["runtime-tokio-rustls", "postgres", "chrono"]

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_postgres"]